...
                    android:id="@+id/cv_update_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:visibility="gone"
                    card_view:cardCornerRadius="4dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="@dimen/cell_size"
...
                            android:layout_gravity="center"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rl_business_around_you"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/cell_size"
...
                            android:layout_below="@+id/tv_business_title"
                            android:layout_alignLeft="@+id/tv_business_title"
                            android:layout_alignRight="@+id/tv_business_title"
                            android:background="@color/theme_aqua" />

                        <TextView
                            android:id="@+id/tv_merchant_view_all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:padding="5dp"
                            android:text="@string/view_all"
                            android:textColor="@android:color/darker_gray"
...

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_merchant_around_you"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingBottom="5dp"
                            android:scrollbarSize="2dp"
                            android:scrollbarStyle="outsideInset"
                            android:scrollbarThumbHorizontal="@color/colorPrimary"
...
                            android:layout_gravity="center"
                            android:visibility="gone" />
                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rl_feed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:minHeight="55dp"
...
                            android:layout_below="@+id/tv_feed_title"
                            android:layout_alignLeft="@+id/tv_feed_title"
                            android:layout_alignRight="@+id/tv_feed_title"
                            android:background="@color/theme_aqua" />

                        <TextView
                            android:id="@+id/tv_feed_view_all"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:text="@string/view_all"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="@dimen/text_size_twelve"
...
