...
    android:id="@+id/ll_cat_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99ffffff"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
...
                            android:layout_height="320dp"
                            android:background="@drawable/image_foreground" />
                    </FrameLayout>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="210dp"
                        android:layout_marginRight="10dp"
                        android:padding="10dp"
...

                                    <TextView
                                        android:id="@+id/tv_rating"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_centerVertical="true"
                                        android:layout_toLeftOf="@+id/tv_rating_review"
                                        android:drawableLeft="@mipmap/star_fill"
                                        android:drawablePadding="5dp"
                                        android:gravity="center"
                                        android:text="0.0"
                                        android:textColor="@android:color/black"
                                        android:textSize="@dimen/rating_text_size" />
...

                                    <androidx.recyclerview.widget.RecyclerView
                                        android:id="@+id/rcv_accreditation"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_alignParentLeft="true"
                                        android:layout_toLeftOf="@+id/btn_join_queues"
                                        android:visibility="gone"/>

                                    <Button
                                        android:id="@+id/btn_pre_approve"
                                        android:layout_width="wrap_content"
                                        android:layout_height="@dimen/btn_standard_height"
...
