...

    <string name="screen_profile">Profile</string>
    <string name="screen_edit_profile">Edit Profile</string>

    <string name="medical_profile">Medical Profile</string>
    <string name="medical_profiles">Medical Profiles</string>
    <string name="screen_view_all">View All</string>
    <string name="screen_upcoming_appointment">Appointments</string>

    <string name="action_settings">Settings</string>
    <string name="join">Click to get token</string>
    <string name="view_token_status">View Token Status</string>
    <string name="login_to_join">Login to Join</string>
...
    <string name="btn_location_setting">Location Settings</string>
    <string name="select_patient">Select Patient</string>
    <string name="logout_warning">You will be logout in %1$d seconds</string>
    <string name="try_again">Try Again</string>

    <!-- Strings from Code 06202020 -->
    <string name="find_doctor">Find Doctor</string>
    <string name="medical">Medical</string>
    <string name="select_a_doctor">Select a Doctor</string>
    <string name="csd_token">CSD Token</string>
    <string name="canteen_store">Canteen Store</string>
    <string name="select_a_queue">Select a Queue</string>
    <string name="view_services">View Services</string>
    <string name="bank">Bank</string>
    <string name="select_a_service">Select a Service</string>
    <string name="health_service">Health Service</string>
    <string name="get_token">Get Token</string>
    <string name="departments">Departments</string>

    <!-- Strings from Code 06292020 -->
    <string name="closed">Closed</string>
    <string name="closing_soon">Closing soon</string>
    <string name="now_closed">Now closed</string>
...
